# despanol

./: .coverage  .gitignore  .ruff.toml  GEMINI.md  README.md  flake.nix  generate_data.py  mypy.ini  pyproject.toml  train.py  transliterate.py
examples/: poem.es.txt  poem.txt
src/despanol/: __init__.py  generate_data.py  transliterate.py
tests/: conftest.py  mock_spanish_database.csv  test_import.py  test_model.py
