[project]
name = "despanol"
version = "0.2.1" # Bump version for QA tools
description = "Python Tool for Phonetic Transliteration (German to Spanish)"
authors = ["Johann <johann@example.com>"]
dependencies = [
  "nltk",
  "pyphen",
  "epitran",
  "pandas",
  "setuptools",
  "python-Levenshtein",
  "appdirs"
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/johannhartmann/despanol"

[project.scripts]
despanol-generate-data = "despanol.generate_data:main"
despanol = "despanol.transliterate:main"

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "mypy",
    "pytest",
    "pandas-stubs",
    "types-requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
