[project]
name = "despanol"
version = "0.3.1" # Bump version for viberdash
description = "Python Tool for Phonetic Transliteration (German to Spanish)"
authors = ["Johann <johann@example.com>"]
dependencies = [
  "nltk",
  "pyphen",
  "epitran",
  "pandas",
  "setuptools",
  "python-Levenshtein",
  "appdirs",
  "tensorflow",
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/johannhartmann/despanol"

[project.scripts]
despanol-generate-data = "despanol.generate_data:main"
despanol = "despanol.transliterate:main"

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "mypy",
    "pytest",
    "pandas-stubs",
    "types-requests",
    "viberdash",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.viberdash]
# The directory to analyze
source_dir = "src/despanol/"

# Thresholds for metric visualization
[tool.viberdash.thresholds.cyclomatic_complexity]
good = 5.0
bad = 10.0

[tool.viberdash.thresholds.maintainability_index]
good = 85.0
bad = 65.0

[tool.viberdash.thresholds.test_coverage]
good = 80.0
bad = 60.0
